# minio_aws_sdk_sample

./: CMakeLists.txt  vcpkg.json
include/: minio.hpp
src/: main.cpp  minio.cpp
